test/org/midica/testfiles/failing/unmatched-close.midica
INCLUDE inc/instruments.midica

(
	0 c /4
)
)